--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,32 +7,7 @@
     "composite": true,
     "allowJs": true
   },
-  "references": [
-    {
-      "path": "../parse5-utils/tsconfig.json"
-    },
-    {
-      "path": "../browser-logs/tsconfig.json"
-    },
-    {
-      "path": "../dev-server-core/tsconfig.json"
-    },
-    {
-      "path": "../test-runner-core/tsconfig.json"
-    },
-    {
-      "path": "../test-runner-coverage-v8/tsconfig.json"
-    },
-    {
-      "path": "../test-runner-mocha/tsconfig.json"
-    },
-    {
-      "path": "../test-runner-chrome/tsconfig.json"
-    },
-    {
-      "path": "../dev-server-rollup/tsconfig.json"
-    }
-  ],
+  "references": [],
   "include": ["src", "types"],
   "exclude": ["src/browser", "tests", "dist"]
 }
